// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`post a reply: open reply form 1`] = `
<div
  className="coral coral-comment"
  data-testid="comment-comment-0"
>
  <div
    className="Box-root HorizontalGutter-root HorizontalGutter-full"
  >
    <div
      className="Indent-root"
    >
      <div
        className=""
      >
        <div
          className="Comment-root"
          role="article"
        >
          <div
            className="Box-root Flex-root Flex-flex Flex-justifySpaceBetween Flex-directionRow"
          >
            <div
              className="Box-root Flex-root Flex-flex Flex-halfItemGutter Flex-alignBaseline Flex-directionColumn gutter"
            >
              <div
                className="Box-root Flex-root Flex-flex Flex-halfItemGutter Flex-alignCenter Flex-directionRow gutter"
              >
                <div
                  className="Popover-root"
                >
                  <button
                    aria-controls="username-popover"
                    className="BaseButton-root"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    type="button"
                  >
                    <span
                      className="Box-root Typography-root Typography-heading3 Typography-colorTextPrimary Username-root coral coral-comment-username"
                    >
                      Markus
                    </span>
                  </button>
                  <div
                    aria-hidden={true}
                    aria-labelledby="username-popover-ariainfo"
                    id="username-popover"
                    role="popup"
                  >
                    <div
                      className="AriaInfo-root"
                      id="username-popover-ariainfo"
                    >
                      A popover with more user information
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="Box-root Flex-root Flex-flex Flex-itemGutter Flex-alignBaseline Flex-directionRow gutter"
              >
                <time
                  className="Timestamp-root coral coral-comment-timestamp RelativeTime-root"
                  dateTime="2018-07-06T18:24:00.000Z"
                  title="2018-07-06T18:24:00.000Z"
                >
                  2018-07-06T18:24:00.000Z
                </time>
              </div>
            </div>
            <div>
              <div
                className="Box-root Flex-root Flex-flex Flex-itemGutter Flex-alignCenter gutter"
              />
            </div>
          </div>
          <div
            className="Box-root HorizontalGutter-root HorizontalGutter-spacing-1"
          >
            <div
              className="HTMLContent-root"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Joining Too",
                }
              }
            />
            <div
              className="Box-root Flex-root Flex-flex Flex-justifySpaceBetween"
            >
              <div
                className="Box-root Flex-root Flex-flex Flex-halfItemGutter Flex-directionRow gutter"
              >
                <button
                  className="BaseButton-root Button-root Button-sizeSmall Button-colorRegular Button-variantGhost"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  type="button"
                >
                  <span>
                    Respect
                  </span>
                </button>
                <button
                  className="BaseButton-root Button-root Button-sizeSmall Button-colorRegular Button-variantGhost Button-active"
                  disabled={false}
                  id="comments-commentContainer-replyButton-comment-0"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  type="button"
                >
                  <span>
                    Reply
                  </span>
                </button>
                <div
                  className="Popover-root"
                >
                  <button
                    aria-controls="permalink-popover-comment-0"
                    className="BaseButton-root Button-root Button-sizeSmall Button-colorRegular Button-variantGhost"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    type="button"
                  >
                    <span>
                      Share
                    </span>
                  </button>
                  <div
                    aria-hidden={true}
                    aria-labelledby="permalink-popover-comment-0-ariainfo"
                    id="permalink-popover-comment-0"
                    role="popup"
                  >
                    <div
                      className="AriaInfo-root"
                      id="permalink-popover-comment-0-ariainfo"
                    >
                      A dialog showing a permalink to the comment
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="Box-root Flex-root Flex-flex Flex-halfItemGutter Flex-directionRow gutter"
              >
                <div
                  className="Popover-root"
                >
                  <button
                    aria-controls="report-popover-comment-0"
                    className="BaseButton-root Button-root Button-sizeSmall Button-colorRegular Button-variantGhost"
                    disabled={false}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    type="button"
                  >
                    <span>
                      Report
                    </span>
                  </button>
                  <div
                    aria-hidden={true}
                    aria-labelledby="report-popover-comment-0-ariainfo"
                    id="report-popover-comment-0"
                    role="popup"
                  >
                    <div
                      className="AriaInfo-root"
                      id="report-popover-comment-0-ariainfo"
                    >
                      A dialog for reporting comments
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <form
      autoComplete="off"
      className="coral coral-createReplyComment"
      id="comments-replyCommentForm-form-comment-0"
      onSubmit={[Function]}
    >
      <div
        className="Box-root HorizontalGutter-root HorizontalGutter-full"
      >
        <div
          className="Box-root HorizontalGutter-root HorizontalGutter-half"
        >
          <div
            className="coral coral-createReplyComment-box"
          >
            <label
              className="AriaInfo-root"
              htmlFor="comments-replyCommentForm-rte-comment-0"
            >
              Write a reply
            </label>
            <div
              className="Box-root Flex-root ReplyTo-root Flex-flex Flex-alignCenter"
            >
              <span
                aria-hidden="true"
                className="Icon-root Icon-sm"
              >
                reply
              </span>
              <span>
                 
              </span>
              <span
                className="Box-root Typography-root Typography-bodyCopy Typography-colorTextPrimary ReplyTo-text"
              >
                Replying to: 
                <span
                  className="Box-root Typography-root Typography-heading4 Typography-colorTextPrimary ReplyTo-username"
                >
                  Markus
                </span>
              </span>
            </div>
            <div>
              <div
                className=""
              >
                <div
                  className="RTE-contentEditableContainer"
                >
                  <div
                    aria-placeholder="Write a reply"
                    className="RTE-contentEditable RTE-content"
                    contentEditable={true}
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "",
                      }
                    }
                    disabled={false}
                    id="comments-replyCommentForm-rte-comment-0"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onCut={[Function]}
                    onFocus={[Function]}
                    onInput={[Function]}
                    onKeyDown={[Function]}
                    onPaste={[Function]}
                    onSelect={[Function]}
                  />
                  <div
                    aria-hidden="true"
                    className="RTE-placeholder RTE-placeholder"
                  >
                    Write a reply
                  </div>
                </div>
                <div
                  className="RTE-toolbar RTE-toolbarBottom Toolbar-toolbar"
                >
                  <button
                    className="Button-button"
                    disabled={false}
                    onClick={[Function]}
                    title="Bold"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      className="Icon-root Icon-md"
                    >
                      format_bold
                    </span>
                  </button>
                  <button
                    className="Button-button"
                    disabled={false}
                    onClick={[Function]}
                    title="Italic"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      className="Icon-root Icon-md"
                    >
                      format_italic
                    </span>
                  </button>
                  <button
                    className="Button-button"
                    disabled={false}
                    onClick={[Function]}
                    title="Blockquote"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      className="Icon-root Icon-md"
                    >
                      format_quote
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="Box-root Flex-root Flex-flex Flex-halfItemGutter Flex-justifyFlexEnd Flex-directionRow gutter"
        >
          <button
            className="BaseButton-root Button-root Button-sizeRegular Button-colorRegular Button-variantOutlined"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            type="button"
          >
            Cancel
          </button>
          <button
            className="BaseButton-root Button-root coral coral-createReplyComment-submit Button-sizeRegular Button-colorPrimary Button-variantFilled Button-disabled"
            disabled={true}
            onBlur={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            type="submit"
          >
            Submit
          </button>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`post a reply: optimistic response 1`] = `
<div
  className="Box-root HorizontalGutter-root HorizontalGutter-full"
  data-testid="commentReplyList-comment-0"
  id="coral-comments-replyList-log--comment-0"
  role="log"
>
  <div
    className="Box-root HorizontalGutter-root HorizontalGutter-full"
  >
    <div
      className="coral coral-comment"
      data-testid="comment-uuid-0"
    >
      <div
        className="Box-root HorizontalGutter-root HorizontalGutter-full"
      >
        <div
          className="IndentedComment-blur Indent-root"
        >
          <div
            className="Indent-level1"
          >
            <div
              className="Comment-root"
              role="article"
            >
              <div
                className="Box-root Flex-root Flex-flex Flex-justifySpaceBetween Flex-directionRow"
              >
                <div
                  className="Box-root Flex-root Flex-flex Flex-halfItemGutter Flex-alignBaseline Flex-directionColumn gutter"
                >
                  <div
                    className="Box-root Flex-root Flex-flex Flex-halfItemGutter Flex-alignCenter Flex-directionRow gutter"
                  >
                    <div
                      className="Popover-root"
                    >
                      <button
                        aria-controls="username-popover"
                        className="BaseButton-root"
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onMouseOut={[Function]}
                        onMouseOver={[Function]}
                        onTouchEnd={[Function]}
                        type="button"
                      >
                        <span
                          className="Box-root Typography-root Typography-heading3 Typography-colorTextPrimary Username-root coral coral-comment-username"
                        >
                          Markus
                        </span>
                      </button>
                      <div
                        aria-hidden={true}
                        aria-labelledby="username-popover-ariainfo"
                        id="username-popover"
                        role="popup"
                      >
                        <div
                          className="AriaInfo-root"
                          id="username-popover-ariainfo"
                        >
                          A popover with more user information
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    className="Box-root Flex-root Flex-flex Flex-itemGutter Flex-alignBaseline Flex-directionRow gutter"
                  >
                    <time
                      className="Timestamp-root coral coral-comment-timestamp RelativeTime-root"
                      dateTime="2018-07-06T18:24:00.000Z"
                      title="2018-07-06T18:24:00.000Z"
                    >
                      2018-07-06T18:24:00.000Z
                    </time>
                  </div>
                </div>
                <div>
                  <div
                    className="Box-root Flex-root Flex-flex Flex-itemGutter Flex-alignCenter gutter"
                  >
                    <button
                      className="BaseButton-root Button-root Button-sizeRegular Button-colorPrimary Button-variantUnderlined"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      onTouchEnd={[Function]}
                      type="button"
                    >
                      Edit
                    </button>
                  </div>
                </div>
              </div>
              <div
                className="Comment-subBar"
              >
                <div
                  className="Box-root Flex-root Flex-flex Flex-alignCenter"
                >
                  <span
                    aria-hidden="true"
                    className="Icon-root Icon-sm InReplyTo-icon"
                  >
                    reply
                  </span>
                  <span>
                     
                  </span>
                  <span
                    className="Box-root Typography-root Typography-timestamp Typography-colorTextPrimary InReplyTo-inReplyTo"
                  >
                    In reply to 
                    <span
                      className="Box-root Typography-root Typography-heading5 Typography-colorTextPrimary InReplyTo-username"
                    >
                      Markus
                    </span>
                  </span>
                </div>
              </div>
              <div
                className="Box-root HorizontalGutter-root HorizontalGutter-spacing-1"
              >
                <div
                  className="HTMLContent-root"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<b>Hello world!</b>",
                    }
                  }
                />
                <div
                  className="Box-root Flex-root Flex-flex Flex-justifySpaceBetween"
                >
                  <div
                    className="Box-root Flex-root Flex-flex Flex-halfItemGutter Flex-directionRow gutter"
                  >
                    <button
                      className="BaseButton-root Button-root Button-sizeSmall Button-colorRegular Button-variantGhost"
                      disabled={false}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      onTouchEnd={[Function]}
                      type="button"
                    >
                      <span>
                        Respect
                      </span>
                    </button>
                    <button
                      className="BaseButton-root Button-root Button-sizeSmall Button-colorRegular Button-variantGhost"
                      disabled={false}
                      id="comments-commentContainer-replyButton-uuid-0"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      onTouchEnd={[Function]}
                      type="button"
                    >
                      <span>
                        Reply
                      </span>
                    </button>
                    <div
                      className="Popover-root"
                    >
                      <button
                        aria-controls="permalink-popover-uuid-0"
                        className="BaseButton-root Button-root Button-sizeSmall Button-colorRegular Button-variantGhost"
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onMouseOut={[Function]}
                        onMouseOver={[Function]}
                        onTouchEnd={[Function]}
                        type="button"
                      >
                        <span>
                          Share
                        </span>
                      </button>
                      <div
                        aria-hidden={true}
                        aria-labelledby="permalink-popover-uuid-0-ariainfo"
                        id="permalink-popover-uuid-0"
                        role="popup"
                      >
                        <div
                          className="AriaInfo-root"
                          id="permalink-popover-uuid-0-ariainfo"
                        >
                          A dialog showing a permalink to the comment
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    className="Box-root Flex-root Flex-flex Flex-halfItemGutter Flex-directionRow gutter"
                  >
                    <div
                      className="Popover-root"
                    >
                      <button
                        aria-controls="report-popover-uuid-0"
                        className="BaseButton-root Button-root Button-sizeSmall Button-colorRegular Button-variantGhost"
                        disabled={false}
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onMouseOut={[Function]}
                        onMouseOver={[Function]}
                        onTouchEnd={[Function]}
                        type="button"
                      >
                        <span>
                          Report
                        </span>
                      </button>
                      <div
                        aria-hidden={true}
                        aria-labelledby="report-popover-uuid-0-ariainfo"
                        id="report-popover-uuid-0"
                        role="popup"
                      >
                        <div
                          className="AriaInfo-root"
                          id="report-popover-uuid-0-ariainfo"
                        >
                          A dialog for reporting comments
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
